--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node build/index.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/JC-Jeyci/typescript-express#readme",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "typescript": "^4.9.5"
   },
   "dependencies": {
